<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reset_password"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_24"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gl_start"
                tools:text="@string/reset_password" />

            <TextView
                android:id="@+id/tv_signin_to_continue"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/reset_msg"
                android:textAppearance="@style/TextStyle"
                android:textSize="@dimen/sp_16"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

            <TextView
                android:id="@+id/tvReset"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reset_code"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_20"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_signin_to_continue"
                tools:text="@string/reset_code" />

            <TextView
                android:id="@+id/tv_password"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/new_password"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_20"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutReset"
                tools:text="@string/new_password" />

            <TextView
                android:id="@+id/tv_confirm_password"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/confirm_password"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_20"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layouPassword"
                tools:text="@string/confirm_password" />

            <TextView
                android:id="@+id/tvConfirm"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/confirm_password"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_20"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gl_end" />

            <TextView
                android:id="@+id/tvLogin"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/log_in"
                android:textAppearance="@style/TextStyle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_18"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConfirm"
                tools:text="@string/log_in" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.90"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layouConfirmPassword"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutReset"
                style="@style/TextInputLayout"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_52"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                app:boxCornerRadiusBottomEnd="@dimen/dp_16"
                app:boxCornerRadiusBottomStart="@dimen/dp_16"
                app:boxCornerRadiusTopEnd="@dimen/dp_16"
                app:boxCornerRadiusTopStart="@dimen/dp_16"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReset">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile"
                    tools:hint="Enter your number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layouPassword"
                style="@style/TextInputLayout"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_52"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                app:boxCornerRadiusBottomEnd="@dimen/dp_16"
                app:boxCornerRadiusBottomStart="@dimen/dp_16"
                app:boxCornerRadiusTopEnd="@dimen/dp_16"
                app:boxCornerRadiusTopStart="@dimen/dp_16"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile"
                    tools:hint="@string/enter_your_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layouConfirmPassword"
                style="@style/TextInputLayout"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_52"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp_32"
                app:boxCornerRadiusBottomEnd="@dimen/dp_16"
                app:boxCornerRadiusBottomStart="@dimen/dp_16"
                app:boxCornerRadiusTopEnd="@dimen/dp_16"
                app:boxCornerRadiusTopStart="@dimen/dp_16"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>